--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 version: "3"
-services:
+services: 
   my-redis-a:
     hostname: redis-master
     container_name: redis-master
@@ -8,7 +8,7 @@ services:
       - REDIS_REPLICATION_MODE=master
       - ALLOW_EMPTY_PASSWORD=yes
     ports:
-      - 6379:6379
+      - 5123:6379 
   my-redis-b:
     hostname: redis-replicas-1
     container_name: redis-replicas-1
@@ -18,6 +18,50 @@ services:
       - REDIS_MASTER_HOST=redis-master
       - ALLOW_EMPTY_PASSWORD=yes
     ports:
-      - 5123:6379
+      - 5124:6379
     depends_on:
       - my-redis-a
+
+  redis-sentinel-1:
+    container_name: sentinel1
+    image: 'bitnami/redis-sentinel:latest'
+    environment:
+      - REDIS_SENTINEL_DOWN_AFTER_MILLISECONDS=3000
+      - REDIS_MASTER_HOST=redis-master
+      - REDIS_MASTER_PORT_NUMBER=6379
+      - REDIS_MASTER_SET=mymaster
+      - REDIS_SENTINEL_QUORUM=2
+    ports:
+      - 26379:26379
+    depends_on:
+      - my-redis-a
+      - my-redis-b
+  redis-sentinel-2:
+    container_name: sentinel2
+    image: 'bitnami/redis-sentinel:latest'
+    environment:
+      - REDIS_SENTINEL_DOWN_AFTER_MILLISECONDS=3000
+      - REDIS_MASTER_HOST=redis-master
+      - REDIS_MASTER_PORT_NUMBER=6379
+      - REDIS_MASTER_SET=mymaster
+      - REDIS_SENTINEL_QUORUM=2
+    ports:
+      - 26380:26379
+    depends_on:
+      - my-redis-a
+      - my-redis-b
+  redis-sentinel-3:
+    container_name: sentinel3
+    image: 'bitnami/redis-sentinel:latest'
+    environment:
+      - REDIS_SENTINEL_DOWN_AFTER_MILLISECONDS=3000
+      - REDIS_MASTER_HOST=redis-master
+      - REDIS_MASTER_PORT_NUMBER=6379
+      - REDIS_MASTER_SET=mymaster
+      - REDIS_SENTINEL_QUORUM=2
+    ports:
+      - 26381:26379
+    depends_on:
+      - my-redis-a
+      - my-redis-b
+    
